force-app/main/default/objects/Credential_Access__c/Credential_Access__c.object-meta.xml
<CustomObject>
    <label>Credential Access</label>
    <nameField>
        <label>Credential Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credential Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>