force-app/main/default/objects/Credential_Access__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <referenceTo>Project_Org_Credential__c</referenceTo>
    <relationshipLabel>Credential Access</relationshipLabel>
    <relationshipName>CredentialAccess</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>