force-app/main/default/objects/Credential_Access__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>Portal_User__c</referenceTo>
    <relationshipLabel>Credential Access</relationshipLabel>
    <relationshipName>CredentialAccess</relationshipName>
    <type>Lookup</type>
</CustomField>